Fix linter error